// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test's on GifGrid component Should show component correctly 1`] = `
<Fragment>
  <h2
    className="animate__animated animate__fadeIn"
  >
     
    Kiss x Sis
     
  </h2>
  <p
    className="animate__animated animate__flash"
  >
     Loading... 
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Test's on GifGrid component Should show items when image is loaded 1`] = `
<Fragment>
  <h2
    className="animate__animated animate__fadeIn"
  >
     
    Kiss x Sis
     
  </h2>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="new"
      key="new"
      title="Any Thing"
      url="http://localhost/any/thing.jpg"
    />
  </div>
</Fragment>
`;
